--- a/elements/crew-team-manager-team/crew-team-manager-team-list.html
+++ b/elements/crew-team-manager-team/crew-team-manager-team-list.html
@@ -68,7 +68,7 @@
             <app-header slot="header" reveals>
                 <app-toolbar id="toolbar">
                     <paper-icon-button id="menu" icon="menu" on-click="_handleActionMenu"></paper-icon-button>
-                    <div main-title id="title">Teams</div>
+                    <div main-title id="title">Team</div>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
