--- a/elements/crew-team-manager-race/crew-team-manager-race-list-loading.html
+++ b/elements/crew-team-manager-race/crew-team-manager-race-list-loading.html
@@ -23,7 +23,7 @@
         }
         </style>
 
-        <div id="layout" on-click="_handleClick">
+        <div id="layout">
             <paper-spinner-lite active id="spinner"></paper-spinner-lite>
         </div>
 
@@ -43,10 +43,6 @@
                         type: Object,
                     }
                 }
-            }
-
-            _handleClick() {
-                console.log(this.data);
             }
         }
 
