--- a/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
+++ b/elements/crew-team-manager-finance/crew-team-manager-finance-list.html
@@ -77,6 +77,7 @@
                 <app-toolbar id="toolbar">
                     <paper-icon-button id="menu" icon="menu" on-click="_handleActionMenu"></paper-icon-button>
                     <div main-title id="title">Finances</div>
+                    <paper-icon-button id="logout" icon="exit-to-app" on-click="_handleActionLogout"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
@@ -105,7 +106,6 @@
                 ]
             }
 
-
             static get properties() {
                 return {
                     _page: {
@@ -122,6 +122,13 @@
 
             _handleActionMenu() {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerFinanceList.is + '-action-menu', {
+                    bubbles: true,
+                    composed: true
+                }));
+            }
+
+            _handleActionLogout() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerStage.is + '-action-logout', {
                     bubbles: true,
                     composed: true
                 }));
