--- a/elements/crew-team-manager-rigger/crew-team-manager-rigger-list.html
+++ b/elements/crew-team-manager-rigger/crew-team-manager-rigger-list.html
@@ -77,6 +77,7 @@
                 <app-toolbar id="toolbar">
                     <paper-icon-button id="menu" icon="menu" on-click="_handleActionMenu"></paper-icon-button>
                     <div main-title id="title">Riggers</div>
+                    <paper-icon-button id="logout" icon="exit-to-app" on-click="_handleActionLogout"></paper-icon-button>
                 </app-toolbar>
             </app-header>
             <iron-pages id="pages" attr-for-selected="id" selected="[[_page]]">
@@ -124,6 +125,13 @@
 
             _handleActionMenu() {
                 this.dispatchEvent(new CustomEvent(crewTeamManagerRiggerList.is + '-action-menu', {
+                    bubbles: true,
+                    composed: true
+                }));
+            }
+
+            _handleActionLogout() {
+                this.dispatchEvent(new CustomEvent(crewTeamManagerStage.is + '-action-logout', {
                     bubbles: true,
                     composed: true
                 }));
