--- a/elements/crew-team-manager-login/crew-team-manager-login.html
+++ b/elements/crew-team-manager-login/crew-team-manager-login.html
@@ -81,6 +81,12 @@
                 return 'crew-team-manager-login'
             }
 
+            static get observers() {
+                return [
+                    '_actionLogout(logout)'
+                ]
+            }
+
             static get properties() {
                 return {
                     _username: {
@@ -95,13 +101,30 @@
 
                     token: {
                         type: Object
+                    },
+
+                    logout: {
+                        type: Boolean
                     }
+                }
+            }
+
+            _actionLogout(logout) {
+                if (logout) {
+                    this.$['auth'].signOut()
+                        .then(() => {
+                            console.log('logged out');
+                        })
+                        .catch((err) => {
+                            console.log(err);
+                        });
                 }
             }
 
             _handleTokenResponse(evt) {
                 this.$['auth'].signInWithCustomToken(evt.detail.xhr.getResponseHeader('x-firebase-custom-token'))
                     .then(() => {
+                        this.logout = false;
                         this.dispatchEvent(new CustomEvent(crewTeamManagerLogin.is +
                             '-action-login', {
                                 bubbles: true,
